# openzeppelin-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  .release-config.json  .release-please-manifest.json  .typos.toml  .yamlfix.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.development  Dockerfile.production  Makefile.toml  README.md  SECURITY.md  docker-compose.yaml  netlify.toml  osv-scanner.toml  release-please-config.json  rust-toolchain.toml  rustfmt.toml  setup_and_run.sh
.githooks/: pre-push
.github/: codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/actions/prepare/: action.yml
.github/release-please/: .config.json
.github/workflows/: ci.yaml  cla.yml  codeql.yml  pr-title.yaml  rc.yml  release-bins.yml  release-docker.yml  release-docs.yml  release-please.yml  release-sbom.yml  rust-docs-url.yml  scorecard.yml  semgrep.yml  test-bins.yml  update-lock.yaml
cmd/prometheus/: prometheus.yml
config/filters/: evm_filter_block_number.js  evm_filter_block_number.py  evm_filter_block_number.sh  filter_block_number.py  stellar_filter_block_number.js  stellar_filter_block_number.py  stellar_filter_block_number.sh
config/monitors/: evm_transfer_usdc.json.example  stellar_swap_dex.json.example  stellar_transfer_usdc.json.example
config/triggers/: script_notifications.json.example  slack_notifications.json.example  telegram_notifications.json.example
config/triggers/scripts/: custom_notification.js  custom_notification.py  custom_notification.sh
docs/: antora.yml  index.mdx  latest-versions.js  local-evm-testing.mdx  package.json  quickstart.mdx  rpc.mdx
docs/1.0.x/: contribution.mdx  index.mdx  local-evm-testing.mdx  quickstart.mdx
docs/1.1.x/: contribution.mdx  index.mdx  local-evm-testing.mdx  quickstart.mdx
docs/1.2.x/: changelog.mdx
docs/1.3.x/: changelog.mdx  index.mdx
docs/modules/ROOT/: nav.adoc
examples/config/monitors/: rise_access_manager.json  rise_access_manager_arb.json  rise_access_manager_base.json  rise_access_manager_eth.json  rise_access_manager_rise.json  rise_bridge_deposit.json  rise_bridge_deposit_arb.json  rise_bridge_deposit_base.json  rise_bridge_deposit_eth.json  rise_pause_deposit.json  rise_pause_deposit_arb.json  rise_pause_deposit_base.json  (+12 more)
scripts/: entry.sh  rust_antora.sh  setup.sh
scripts/linux/: sys_pkgs.sh
src/: main.rs
src/bootstrap/: mod.rs
src/models/: mod.rs
src/repositories/: error.rs  monitor.rs  network.rs  trigger.rs
src/services/: mod.rs
src/utils/: constants.rs  cron_utils.rs  error.rs  logging.rs  mod.rs  parsing.rs  retry.rs
tests/: integration.rs  mod.rs  properties.rs
tests/properties/: monitor.rs  monitor_prop_tests.rs  strategies.rs
(+247 files in other folders)
