[package]
name = "openzeppelin-monitor"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"         #MSRV

[profile.release]
opt-level = 0
overflow-checks = false
panic = 'abort'

[profile.test]
debug = true
opt-level = 0
overflow-checks = true
panic = 'unwind'

[dependencies]
actix-rt = "2.2.0"
actix-web = "4"
alloy = { version = "0.12.4", features = ["full"] }
anyhow = { version = "1.0.97", features = ["std"] }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["wasmbind"], default-features = false }
clap = { version = "4.5", features = ["cargo"] }
cron = "0.15.0"
dotenvy = "0.15.7"
email_address = "0.2.9"
ethabi = "18.0.0"
futures = "0.3"
glob = "0.3"
hex = "0.4"
hmac = "0.12.0"
lazy_static = "1.5"
lettre = "0.11.11"
libc = "0.2"
log = "0.4"


midnight-ledger = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", package = "midnight-ledger", tag = "ledger-3.0.6", features = [
    "transaction-construction",
    "proving",
    "serde",
    "verifying",
    "test-utilities",
] }
midnight-serialize = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", package = "midnight-serialize", tag = "serialize-0.3" }

#Override itertools for midnight-node-ledger-helpers
# itertools = "0.12.0"
# We use the local path for the midnight-node-ledger-helpers and midnight-node-ledger until a _better_ stable version is released
midnight-node-ledger = { path = "../../midnightntwrk/midnight-node/ledger", package = "midnight-node-ledger", default-features = false }
midnight-node-ledger-helpers = { path = "../../midnightntwrk/midnight-node/ledger/helpers", package = "midnight-node-ledger-helpers", default-features = false }
subxt = "0.41.0"

prometheus = "0.14"
regex = "1.11.0"
reqwest = { version = "=0.12.12", features = ["json"] }
reqwest-middleware = "0.4.1"
reqwest-retry = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
stellar-rpc-client = "22.0.0"
stellar-strkey = "0.0.12"
stellar-xdr = "22.1.0"
sysinfo = "0.33"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5"
urlencoding = "2.1.3"
uuid = "1.15.0"


[dev-dependencies]
cargo-llvm-cov = "0.6"
mockall = "0.13.1"
mockito = "1.6.1"
once_cell = "1.20.0"
proptest = "1.6.0"
rand = "0.9.0"
tempfile = "3.2"
tracing-test = "0.2.5"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "openzeppelin-monitor"

[features]
test-ci-only = []
